--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts"
-  },  
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "mysql2": "^3.7.0",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.19"
   }
 }
