chore: adicionando mais campos de configuração TypeScript

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,10 @@
       "forceConsistentCasingInFileNames": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "allowJs": true
+      "allowJs": true,
+      "noImplicitAny": true,
+      "strictPropertyInitialization": false,
+      "resolveJsonModule": true,
     }
   }
   
