--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "googleapis": "^131.0.0",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.0",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.19"
