--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
     "googleapis": "^131.0.0",
     "mime-types": "^2.1.35",
