--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/html-pdf": "^3.0.3",
     "@types/node": "^20.11.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
@@ -24,9 +25,11 @@
     "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
     "googleapis": "^131.0.0",
+    "html-pdf": "^3.0.1",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.0",
+    "pdfmake": "^0.2.9",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.19"
   }
