--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
@@ -14,16 +14,16 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/html-pdf": "^3.0.3",
+    "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.0",
-    "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@types/mime-types": "^2.1.4",
-    "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
+    "express": "^4.18.3",
     "googleapis": "^131.0.0",
     "html-pdf": "^3.0.1",
     "mime-types": "^2.1.35",
