--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "node src/index.ts",
+    "start": "ts-node-esm src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
@@ -19,7 +19,6 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.0",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -32,6 +31,7 @@
     "mysql2": "^3.7.0",
     "pdfmake": "^0.2.9",
     "reflect-metadata": "^0.2.1",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.19"
   }
 }
