--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
-  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "npx tsx src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
@@ -18,8 +17,7 @@
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.0",
-    "nodemon": "^3.0.2",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.0.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -32,6 +30,9 @@
     "pdfmake": "^0.2.9",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.2",
-    "typeorm": "^0.3.19"
+    "tsc": "^2.0.4",
+    "tsx": "^4.7.1",
+    "typeorm": "^0.3.19",
+    "typescript": "^5.3.3"
   }
 }
