--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "googleapis": "^131.0.0",
     "html-pdf": "^3.0.1",
