--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^3.7.0",
     "pdfmake": "^0.2.9",
     "pg": "^8.11.3",
+    "puppeteer": "^22.4.0",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
